--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Home</title>
     <link rel="stylesheet" href="index.css">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-   
+  
 </head>
 
 <body>
@@ -89,7 +89,7 @@
        <hr>
 
        <div id="copyright">
-           <h3>Copyrights&copy;by Watch tower.com</h3>
+           <h3>Copyrights&copy;by Alarm clock.com</h3>
        </div>
 
     </footer> 
